src/libACQ/Ni/Include/Flexmotn.h



// REGISTRY is the structure passed to flex_read_registry() function in order to
// return info about the object registry entry.
typedef struct{
	u16 device;
	u16 type;
	u32 pstart;
	u32 size;
} REGSTRY, REGISTRY;


// Enable ADCs
FLEXFUNC flex_enable_adcs (BOARD, u8 reserved, u16 ADCMap);


// Enable Encoders
FLEXFUNC flex_enable_encoders (BOARD, u16 encoderMap);


// Load DAC
FLEXFUNC flex_load_dac (BOARD, u8 DAC, i16 outputValue, u8 inputVector);


// Load PWM Duty Cycle
FLEXFUNC flex_load_pwm_duty (BOARD, u8 PWMOutput, u16 dutycycle, u8 inputVector);


// Read ADC
FLEXFUNC flex_read_adc (BOARD, u8 ADC, u8 returnVector);

// Read ADC
FLEXFUNC flex_read_adc_rtn (BOARD, u8 ADC, i16 FAR *ADCValue);


// Read Encoder Position
FLEXFUNC flex_read_encoder (BOARD, u8 axisOrEncoder, u8 returnVector);

// Read Encoder Position
FLEXFUNC flex_read_encoder_rtn (BOARD, u8 axisOrEncoder, i32 FAR *encoderCounts);


// Read I/O Port
FLEXFUNC flex_read_port (BOARD, u8 port, u8 returnVector);

// Read I/O Port
FLEXFUNC flex_read_port_rtn (BOARD, u8 port, u16 FAR *portData);


// Reset Encoder Position 
FLEXFUNC flex_reset_encoder (BOARD, u8 encoder, i32 position, u8 inputVector);


// Select Signal (RTSI)
FLEXFUNC flex_select_signal (BOARD, u16 destination, u16 source);


// Set ADC Range
FLEXFUNC flex_set_adc_range (BOARD, u8 ADC, u16 range);


// Configure Encoder Filter
FLEXFUNC flex_configure_encoder_filter (BOARD, u8 axisOrEncoder, u16 frequency);


// Set I/O Port Direction
FLEXFUNC flex_set_port_direction (BOARD, u8 port, u16 directionMap);


// Set I/O Port Polarity
FLEXFUNC flex_set_port_pol (BOARD, u8 port, u16 portPolarityMap);


///////////////////////////////////////////////////////////////////////////////////////
// Error & Utility Functions
///////////////////////////////////////////////////////////////////////////////////////

// Get Error Description
FLEXFUNC flex_get_error_description(u16 descriptionType, i32 errorCode, u16 commandID, u16 resourceID, 
												i8 FAR *charArray, u32 FAR *sizeOfArray);


// Get Motion Board Information
FLEXFUNC flex_get_motion_board_info (BOARD, u32 informationType, u32 FAR *informationValue);


// Get Motion Board Name
FLEXFUNC flex_get_motion_board_name (BOARD, i8 FAR *charArray, u32 FAR *sizeOfArray);


//Read Error Message
FLEXFUNC flex_read_error_msg_rtn(BOARD, u16 FAR *commandID, u16 FAR *resourceID, i32 FAR *errorCode);


// Get Last Error
FLEXFUNC flex_get_last_error(BOARD, u16 *commandID, u16 *resourceID, i32 *errorCode);


// Get u32
FLEXFUNC flex_getu32(BOARD, u8 resource, u16 attribute, u32 *value);


// Set u32
FLEXFUNC flex_setu32(BOARD, u8 resource, u16 attribute, u32 value);


///////////////////////////////////////////////////////////////////////////////////////
// On-board Programming Functions
///////////////////////////////////////////////////////////////////////////////////////

//Begin Program Storage
FLEXFUNC flex_begin_store(BOARD, u8 program);


//End Program Storage
FLEXFUNC flex_end_store(BOARD, u8 program);


//Insert Label
FLEXFUNC flex_insert_program_label(BOARD, u16 labelNumber);


//Jump to Label on Condition
FLEXFUNC flex_jump_label_on_condition (BOARD, u8 resource, u16 condition, u8 mustOn, 
                                       u8 mustOff, u16 matchType, u16 labelNumber);


//Load Program Delay
FLEXFUNC flex_load_delay(BOARD, u32 delayTime);


//Pause/Resume Program
FLEXFUNC flex_pause_prog(BOARD, u8 program);


//Read Program Status
FLEXFUNC flex_read_program_status (BOARD, u8 program, u8 returnVector);

//Read Program Status
FLEXFUNC flex_read_program_status_rtn (BOARD, u8 program, u16 FAR *programStatus);


//Run Program
FLEXFUNC flex_run_prog(BOARD, u8 program);


//Set User Status MOMO
FLEXFUNC flex_set_status_momo(BOARD, u8 mustOn, u8 mustOff);


//Stop Program
FLEXFUNC flex_stop_prog(BOARD, u8 program);


//Wait on Condition
FLEXFUNC flex_wait_on_condition(BOARD, u8 resource, u16 waitType, u16 condition, u8 mustOn, 
                                u8 mustOff, u16 matchType, u16 timeOut, u8 returnVector);



//////// Object Management Functions

//Load Memory Object Description
//Maximum size of description that can be entered is 32 chars
FLEXFUNC flex_load_description(BOARD, u8 object, i8 FAR *description);


// Object Memory Management
FLEXFUNC flex_object_mem_manage(BOARD, u8 object, u16 operation);


//Read Memory Object Description
//description points to an array of size 32
FLEXFUNC flex_read_description_rtn(BOARD, u8 object, i8 FAR * description);


//Read Object Registry
FLEXFUNC flex_read_registry_rtn(BOARD, u8 index, REGISTRY FAR *registryRecord);



//////// Data Operations Functions

//Add Variables
FLEXFUNC flex_add_vars(BOARD, u8 variable1, u8 variable2, u8 returnVector);


//AND Variables
FLEXFUNC flex_and_vars(BOARD, u8 variable1, u8 variable2, u8 returnVector);


//Divide Variables
FLEXFUNC flex_div_vars(BOARD, u8 variable1, u8 variable2, u8 returnVector);


//Load Constant to Variable
FLEXFUNC flex_load_var(BOARD, i32 value, u8 variable1);


//Logical Shift Variable
FLEXFUNC flex_lshift_var(BOARD, u8 variable1, i8 logicalShift, u8 returnVector);


//Multiply Variables
FLEXFUNC flex_mult_vars(BOARD, u8 variable1, u8 variable2, u8 returnVector);


//Invert Variable
FLEXFUNC flex_not_var(BOARD, u8 variable1, u8 returnVector);


//OR Variables
FLEXFUNC flex_or_vars(BOARD, u8 variable1, u8 variable2, u8 returnVector);


//Read Variable
FLEXFUNC flex_read_var(BOARD, u8 variable1, u8 returnVector);

//Read Variable
FLEXFUNC flex_read_var_rtn(BOARD, u8 variable1, i32 FAR *value);


//Subtract Variables
FLEXFUNC flex_sub_vars(BOARD, u8 variable1, u8 variable2, u8 returnVector);


//Exclusive OR Variables
FLEXFUNC flex_xor_vars(BOARD, u8 variable1, u8 variable2, u8 returnVector);



///////////////////////////////////////////////////////////////////////////////////////
// Advanced Functions
///////////////////////////////////////////////////////////////////////////////////////

//Clear Power Up Status
FLEXFUNC flex_clear_pu_status(BOARD);


//Communicate
FLEXFUNC flex_communicate(BOARD, u8 mode, u8 wordCount, u8 FAR *resource,
				  u16 FAR *command, u16 FAR *data, u8 vector);


//Flush Return Data Buffer
FLEXFUNC flex_flush_rdb(BOARD);


//Enable Auto Start
FLEXFUNC flex_enable_auto_start(BOARD, u8 enableOrDisable, u8 programToExecute);


//Enable Shut Down
FLEXFUNC flex_enable_shutdown(BOARD);


//Enable 1394 Watchdog
FLEXFUNC flex_enable_1394_watchdog(BOARD, u16 enableOrDisable);


//Read Communication Status
FLEXFUNC flex_read_csr_rtn(BOARD, u16 FAR *csr);


//Reset Default Parameters
FLEXFUNC flex_reset_defaults (BOARD);


//Save Default Parameters
FLEXFUNC flex_save_defaults (BOARD);


//Set Interrupt Event Mask
FLEXFUNC flex_set_irq_mask(BOARD, u16 mask);