src/libACQ/Ni/Include/flexcomp.h



//Set Port MOMO (replaced by flex_set_port)
FLEXFUNC flex_set_port_momo(BOARD, u8 port, u8 mustOn, u8 mustOff);