src/libACQ/Ni/Include/FLEXMOTN.BAS


''''Enable ADCs
Declare Function flex_enable_adcs Lib "FlexMotion32.dll" (ByVal boardID%, ByVal reserved%, ByVal ADCMap%) As Long

''''Enable Encoders
Declare Function flex_enable_encoders Lib "FlexMotion32.dll" (ByVal boardID%, ByVal encoderMap%) As Long

''''Load DAC
Declare Function flex_load_dac Lib "FlexMotion32.dll" (ByVal boardID%, ByVal DAC%, ByVal outputValuel%, ByVal inputVector%) As Long

''''Load PWM Duty Cycle
Declare Function flex_load_pwm_duty Lib "FlexMotion32.dll" (ByVal boardID%, ByVal PWMOutput%, ByVal dutycycle%, ByVal inpvect%) As Long

''''Read ADC
Declare Function flex_read_adc Lib "FlexMotion32.dll" (ByVal boardID%, ByVal ADCe%, ByVal returnVector%) As Long
''''Read ADC
Declare Function flex_read_adc_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal ADC%, ADCValue%) As Long

'''''Read Encoder Position
Declare Function flex_read_encoder Lib "FlexMotion32.dll" (ByVal boardID%, ByVal encoder%, ByVal returnVector%) As Long
'''''Read Encoder Position
Declare Function flex_read_encoder_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal encoder%, encoderCounts&) As Long

''''Read I/O Port
Declare Function flex_read_port Lib "FlexMotion32.dll" (ByVal boardID%, ByVal port%, ByVal returnVectort%) As Long
''''Read I/O Port
Declare Function flex_read_port_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal port%, portData%) As Long

'''''Reset Encoder Position
Declare Function flex_reset_encoder Lib "FlexMotion32.dll" (ByVal boardID%, ByVal encoder%, ByVal position&, ByVal inputVector%) As Long

''''Select Signal (RTSI)
Declare Function flex_select_signal Lib "FlexMotion32.dll" (ByVal boardID%, ByVal destination%, ByVal source%) As Long

'''' Set ADC Range
Declare Function flex_set_adc_range Lib "FlexMotion32.dll" (ByVal boardID%, ByVal ADC%, ByVal range%) As Long

'''' Configure Encoder Filter
Declare Function flex_configure_encoder_filter Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal frequency%) As Long

''''Set I/O Port Direction
Declare Function flex_set_port_direction Lib "FlexMotion32.dll" (ByVal boardID%, ByVal port%, ByVal Direction%) As Long

''''Set I/O Port MOMO
Declare Function flex_set_port_momo Lib "FlexMotion32.dll" (ByVal boardID%, ByVal port%, ByVal mustOn%, ByVal mustOff%) As Long

''''Set I/O Port Polarity
Declare Function flex_set_port_pol Lib "FlexMotion32.dll" (ByVal boardID%, ByVal port%, ByVal portPolarityMap%) As Long

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' Error & Utility Functions
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Get Error Description
Declare Function flex_get_error_description Lib "FlexMotion32.dll" (ByVal descriptionType%, ByVal errorCode&, ByVal commandID%, ByVal resourceID%, ByVal charArray As String, sizeOfArray&) As Long

''''Get Motion Board Information
Declare Function flex_get_motion_board_info Lib "FlexMotion32.dll" (ByVal boardID%, ByVal informationType&, informationValue&) As Long

''''Get Motion Board Name
Declare Function flex_get_motion_board_name Lib "FlexMotion32.dll" (ByVal boardID%, ByVal charArray As String, sizeOfArray&) As Long

''''Read Error Message
Declare Function flex_read_error_msg_rtn Lib "FlexMotion32.dll" (ByVal boardID%, commandID%, resourceID%, errorCode&) As Long

''''Get Last Error
Declare Function flex_get_last_error Lib "FlexMotion32.dll" (ByVal boardID%, commandID%, resourceID%, errorCode&) As Long

''''Get u32
Declare Function flex_getu32 Lib "FlexMotion32.dll" (ByVal boardID%, ByVal resource%, ByVal attrib%, value&) As Long

''''Set u32
Declare Function flex_setu32 Lib "FlexMotion32.dll" (ByVal boardID%, ByVal resource%, ByVal attrib%, ByVal value&) As Long


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' On-board Programming Functions
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Begin Program Storage
Declare Function flex_begin_store Lib "FlexMotion32.dll" (ByVal boardID%, ByVal program%) As Long

''''End Program Storage
Declare Function flex_end_store Lib "FlexMotion32.dll" (ByVal boardID%, ByVal program%) As Long

''''Insert Label
Declare Function flex_insert_program_label Lib "FlexMotion32.dll" (ByVal boardID%, ByVal labelNumber%) As Long

''''Jump to Label on Condition
Declare Function flex_jump_label_on_condition Lib "FlexMotion32.dll" (ByVal boardID%, ByVal resource%, ByVal condition%, ByVal mustOn%, ByVal mustOff%, ByVal matchType%, ByVal labelNumber%) As Long

''''Load Program Delay
Declare Function flex_load_delay Lib "FlexMotion32.dll" (ByVal boardID%, ByVal delayTime&) As Long

''''Pause/Resume Program
Declare Function flex_pause_prog Lib "FlexMotion32.dll" (ByVal boardID%, ByVal program%) As Long

''''Read Program Status
Declare Function flex_read_program_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal program%, ByVal returnVector%) As Long
''''Read Program Status
Declare Function flex_read_program_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal program%, programStatus%) As Long

''''Run Program
Declare Function flex_run_prog Lib "FlexMotion32.dll" (ByVal boardID%, ByVal program%) As Long

''''Set User Status MOMO
Declare Function flex_set_status_momo Lib "FlexMotion32.dll" (ByVal boardID%, ByVal mustOn%, ByVal mustOff%) As Long

''''Stop Program
Declare Function flex_stop_prog Lib "FlexMotion32.dll" (ByVal boardID%, ByVal program%) As Long

''''Wait on Condition
Declare Function flex_wait_on_condition Lib "FlexMotion32.dll" (ByVal boardID%, ByVal resource%, ByVal waitType%, ByVal condition%, ByVal mustOn%, ByVal mustOff%, ByVal matchType%, ByVal timeout%, ByVal returnVector%) As Long

''''''Object Management Functions

''''Load Memory Object Description
''''Maximum size of description that can be entered is 32 chars
Declare Function flex_load_description Lib "FlexMotion32.dll" (ByVal boardID%, ByVal object%, ByVal description As String) As Long
''''Object Memory Management
Declare Function flex_object_mem_manage Lib "FlexMotion32.dll" (ByVal boardID%, ByVal object%, ByVal operation%) As Long

''''Read Memory Object Description
''''description points to an array of size 32
Declare Function flex_read_description_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal object%, ByVal description As String) As Long

''''Read Object Registry
Declare Function flex_read_registry_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal Index%, rec As registryRecord) As Long

''''''Data Operations Functions

''''Add Variables
Declare Function flex_add_vars Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal variable2%, ByVal returnVector%) As Long

''''And Variables
Declare Function flex_and_vars Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal variable2%, ByVal returnVector%) As Long

''''Divide Variables
Declare Function flex_div_vars Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal variable2%, ByVal returnVector%) As Long

''''Load Constant to Variable
Declare Function flex_load_var Lib "FlexMotion32.dll" (ByVal boardID%, ByVal value&, ByVal variable1%) As Long

''''Logical Shift Variable
Declare Function flex_lshift_var Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal logicalShift%, ByVal returnVector%) As Long

''''Multiply Variables
Declare Function flex_mult_vars Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal variable2%, ByVal returnVector%) As Long

''''Invert Variable
Declare Function flex_not_var Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal returnVector%) As Long

''''OR Variables
Declare Function flex_or_vars Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal variable2%, ByVal returnVector%) As Long

''''Read Variable
Declare Function flex_read_var Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal returnVector%) As Long

''''Read Variable
Declare Function flex_read_var_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, value&) As Long

''''Subtract Variables
Declare Function flex_sub_vars Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal variable2%, ByVal returnVector%) As Long

''''Exclusive OR Variables
Declare Function flex_xor_vars Lib "FlexMotion32.dll" (ByVal boardID%, ByVal variable1%, ByVal variable2%, ByVal returnVector%) As Long

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' Advanced Functions
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Clear Power Up Status
Declare Function flex_clear_pu_status Lib "FlexMotion32.dll" (ByVal boardID%) As Long

''''Communicate
Declare Function flex_communicate Lib "FlexMotion32.dll" (ByVal boardID%, ByVal Mode%, ByVal wordcount%, resource%, command%, data%, ByVal vector%) As Long

''''Enable Auto Start
Declare Function flex_enable_auto_start Lib "FlexMotion32.dll" (ByVal boardID%, ByVal enableOrDisable%, ByVal programToExecute%) As Long

''''Enable Shut Down
Declare Function flex_enable_shutdown Lib "FlexMotion32.dll" (ByVal boardID%) As Long

''''Enable 1394 Watchdog
Declare Function flex_enable_1394_watchdog Lib "FlexMotion32.dll" (ByVal boardID%, ByVal enableWatchdog%) As Long

''''Flush Return Data Buffer
Declare Function flex_flush_rdb Lib "FlexMotion32.dll" (ByVal boardID%) As Long

''''Read Communication Status
Declare Function flex_read_csr_rtn Lib "FlexMotion32.dll" (ByVal boardID%, csr%) As Long

''''Set Interrupt Event Mask
Declare Function flex_set_irq_mask Lib "FlexMotion32.dll" (ByVal boardID%, ByVal mask%) As Long

''''Reset Default Parameters
Declare Function flex_reset_defaults Lib "FlexMotion32.dll" (ByVal boardID%) As Long

''''Save Default Parameters
Declare Function flex_save_defaults Lib "FlexMotion32.dll" (ByVal boardID%) As Long


'End
'------------------------------------------------------------------------------------------------------------------------------------------'
